--- a/sass/utils/_variables.scss
+++ b/sass/utils/_variables.scss
@@ -6,6 +6,6 @@
     --thirdty-text-color: #ffffff;
     --accent-color: #2196f3;
     --footer-background-color: #2f303a;
-    --primary-background-color: #ffffff;
-    --secondary-background-color: #f5f4fa;
+    --primary-background-color: #000000;
+    --secondary-background-color: #999900;
 }
