--- a/sass/components/_header.scss
+++ b/sass/components/_header.scss
@@ -1,8 +1,8 @@
 .header {
-    padding-top: 16px;
-    padding-bottom: 16px;
+    padding-top: 5px;
+    padding-bottom: 5px;
     background-color: var(--primary-background-color);
-    border-bottom: 1px solid var(--secondary-background-color);
+    border-bottom: 3px solid var(--secondary-background-color);
 }
 
 .header_container {
@@ -21,4 +21,13 @@
 
 .nav_list {
     display: none;
+}
+
+.mobile-menu-button {
+    border: none;
+    background-color: var(--primary-background-color);
+}
+
+.mobile-menu-button_icon {
+    fill: var(--secondary-background-color);
 }
