--- a/sass/utils/_variables.scss
+++ b/sass/utils/_variables.scss
@@ -1,11 +1,9 @@
 :root {
     --primary-font-family: 'Roboto', sans-serif;
     --secondary-font-family: 'Raleway', sans-serif;
-    --primary-text-color: #212121;
+    --primary-text-color: #edf3bc;
     --secondary-text-color: #757575;
-    --thirdty-text-color: #ffffff;
-    --accent-color: #2196f3;
-    --footer-background-color: #2f303a;
+    --accent-color: #815b07;
     --primary-background-color: #000000;
     --secondary-background-color: #999900;
 }
