--- a/css/main.css
+++ b/css/main.css
@@ -84,11 +84,9 @@ body {
 :root {
   --primary-font-family: "Roboto", sans-serif;
   --secondary-font-family: "Raleway", sans-serif;
-  --primary-text-color: #212121;
+  --primary-text-color: #edf3bc;
   --secondary-text-color: #757575;
-  --thirdty-text-color: #ffffff;
-  --accent-color: #2196f3;
-  --footer-background-color: #2f303a;
+  --accent-color: #815b07;
   --primary-background-color: #000000;
   --secondary-background-color: #999900;
 }
@@ -125,4 +123,115 @@ body {
 
 .mobile-menu-button_icon {
   fill: var(--secondary-background-color);
+}
+
+.mobile-menu {
+  position: fixed;
+  width: 80%;
+  height: 100%;
+  background-color: var(--primary-background-color);
+  z-index: 9;
+  top: 0;
+  right: 0;
+  opacity: 0;
+  visibility: hidden;
+  pointer-events: none;
+  transition: opacity 250ms cubic-bezier(0.4, 0, 0.2, 1), visibility 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  overflow-y: scroll;
+}
+@media screen and (min-width: 768px) {
+  .mobile-menu {
+    display: none;
+  }
+}
+
+.mobile-menu.is-open {
+  opacity: 1;
+  visibility: visible;
+  pointer-events: auto;
+}
+
+.mobile-menu__container {
+  padding-top: 30px;
+  padding-bottom: 30px;
+  padding-left: 25px;
+  display: flex;
+  flex-direction: column;
+  height: 100%;
+}
+
+.mobile-menu__button {
+  position: absolute;
+  top: 8px;
+  right: 10px;
+  border: none;
+  background-color: transparent;
+  padding: 11px 11px;
+  line-height: 0;
+  fill: var(--secondary-background-color);
+  transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+.mobile-menu__button:hover, .mobile-menu__button:focus {
+  fill: var(--accent-color);
+}
+
+.mobile-nav__item:not(:last-child) {
+  margin-bottom: 18px;
+}
+
+.nav-field {
+  margin-bottom: 30px;
+}
+
+.mobile-nav__link {
+  color: var(--primary-text-color);
+  font-family: var(--primary-font-family);
+  font-weight: 500;
+  font-size: 20px;
+  line-height: 1.18;
+  letter-spacing: 0.02em;
+  transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+.mobile-nav__link:hover, .mobile-nav__link:focus {
+  color: var(--accent-color);
+}
+
+.mobile-contacts__item:not(:last-child) {
+  margin-bottom: 10px;
+}
+
+.mobile-contacts__link-tell {
+  font-family: var(--primary-font-family);
+  font-weight: 500;
+  font-size: 20px;
+  line-height: 1.18;
+  letter-spacing: 0.02em;
+  color: var(--primary-text-color);
+  transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+.mobile-contacts__link-tell:hover, .mobile-contacts__link-tell:focus {
+  color: var(--accent-color);
+}
+
+.mobile-social-list {
+  display: flex;
+  align-items: center;
+}
+
+.mobile-social-list__item {
+  padding: 4px 4px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+.mobile-social-list__item:not(:last-child) {
+  margin-right: 10px;
+}
+
+.mobile-social-list__icon {
+  fill: var(--primary-text-color);
+  transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+.mobile-social-list__link:hover .mobile-social-list__icon, .mobile-social-list__link:focus .mobile-social-list__icon {
+  fill: var(--accent-color);
 }/*# sourceMappingURL=main.css.map */
