--- a/css/main.css
+++ b/css/main.css
@@ -96,32 +96,126 @@ body {
   padding-bottom: 5px;
   background-color: var(--primary-background-color);
   border-bottom: 3px solid var(--secondary-background-color);
+  /* position: fixed;
+  width: 100%; */
 }
 
-.header_container {
+.header__container {
   display: flex;
   align-items: center;
   justify-content: space-between;
+}
+@media screen and (min-width: 768px) {
+  .header__container {
+    display: block;
+    padding-top: 5px;
+  }
+}
+
+.social-list__icon {
+  fill: var(--primary-text-color);
+  transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+.social-list__icon:hover, .social-list__icon:focus {
+  fill: var(--secondary-background-color);
+}
+
+.header__menu-field {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  margin-bottom: 10px;
 }
 
 .social-list {
   display: none;
 }
-
-.header_contact-link {
-  display: none;
+@media screen and (min-width: 768px) {
+  .social-list {
+    display: flex;
+    margin-bottom: 10px;
+    justify-content: center;
+  }
 }
 
-.nav_list {
+.social-list__item:not(:last-child) {
+  margin-right: 20px;
+}
+
+.header__contact-link {
   display: none;
+}
+@media screen and (min-width: 768px) {
+  .header__contact-link {
+    display: flex;
+    color: var(--primary-text-color);
+    font-family: var(--primary-font-family);
+    font-weight: 500;
+    font-size: 20px;
+    line-height: 1.18;
+    letter-spacing: 0.02em;
+    transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  }
+  .header__contact-link:hover, .header__contact-link:focus {
+    color: var(--accent-color);
+  }
+}
+
+.nav__list {
+  display: none;
+}
+@media screen and (min-width: 768px) {
+  .nav__list {
+    display: flex;
+  }
 }
 
 .mobile-menu-button {
   border: none;
   background-color: var(--primary-background-color);
 }
+@media screen and (min-width: 768px) {
+  .mobile-menu-button {
+    display: none;
+  }
+}
 
-.mobile-menu-button_icon {
+.nav__item {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  padding: 5px 5px;
+}
+.nav__item:not(:last-child) {
+  margin-right: 7px;
+}
+@media screen and (min-width: 1200px) {
+  .nav__item:not(:last-child) {
+    margin-right: 12px;
+  }
+}
+
+.nav__link {
+  color: var(--primary-text-color);
+  font-family: var(--primary-font-family);
+  font-weight: 400;
+  font-size: 15px;
+  line-height: 1.18;
+  letter-spacing: 0.02em;
+  text-align: center;
+  transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+.nav__link:hover, .nav__link:focus {
+  color: var(--accent-color);
+}
+@media screen and (min-width: 1200px) {
+  .nav__link {
+    font-weight: 450;
+    font-size: 20px;
+  }
+}
+
+.mobile-menu-button__icon {
   fill: var(--secondary-background-color);
 }
 
@@ -152,7 +246,7 @@ body {
 }
 
 .mobile-menu__container {
-  padding-top: 48px;
+  padding-top: 80px;
   padding-bottom: 48px;
   padding-left: 25px;
   display: flex;
@@ -217,4 +311,17 @@ body {
 }
 .mobile-social-list__link:hover .mobile-social-list__icon, .mobile-social-list__link:focus .mobile-social-list__icon {
   fill: var(--accent-color);
+}
+
+.hero {
+  padding-top: 118px;
+  padding-bottom: 118px;
+  text-align: center;
+  margin-left: auto;
+  margin-right: auto;
+  max-width: 1600px;
+  background-size: cover;
+  background-image: linear-gradient(rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)), url(../images/back_hero.jpg);
+  background-position: center;
+  background-color: #c4c4c4;
 }/*# sourceMappingURL=main.css.map */
