--- a/sass/components/_header.scss
+++ b/sass/components/_header.scss
@@ -3,31 +3,117 @@
     padding-bottom: 5px;
     background-color: var(--primary-background-color);
     border-bottom: 3px solid var(--secondary-background-color);
+    /* position: fixed;
+    width: 100%; */
 }
 
-.header_container {
+.header__container {
     display: flex;
     align-items: center;
     justify-content: space-between;
+    @media screen and (min-width:768px) {
+        display: block;
+        padding-top: 5px;
+    }
+}
+.social-list__icon {
+   fill: var(--primary-text-color);
+   &:hover,
+   &:focus {
+    fill: var(--secondary-background-color)
+   }
+   transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+.header__menu-field {
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    margin-bottom: 10px;
 }
 
 .social-list {
     display: none;
+    @media screen and (min-width:768px) {
+     display: flex;
+     margin-bottom: 10px;
+     justify-content: center;
+    }
+}
+.social-list__item:not(:last-child) {
+    margin-right: 20px;
 }
 
-.header_contact-link {
+.header__contact-link {
     display: none;
+    @media screen and (min-width:768px) {
+        display: flex;
+        color: var(--primary-text-color);
+        font-family: var(--primary-font-family);
+        font-weight: 500;
+        font-size: 20px;
+        line-height: 1.18;
+        letter-spacing: 0.02em;
+        
+        &:hover,
+        &:focus {
+            color: var(--accent-color);
+        }
+        
+        transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+    }
 }
 
-.nav_list {
+.nav__list {
     display: none;
+    @media screen and (min-width:768px) {
+       display: flex;
+
+    }
 }
 
 .mobile-menu-button {
     border: none;
     background-color: var(--primary-background-color);
+    @media screen and (min-width:768px) {
+        display: none;
+    }
+}
+.nav__item {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    padding: 5px 5px;
+    &:not(:last-child) {
+        margin-right: 7px;
+    }    
+    @media screen and(min-width: 1200px) {
+        &:not(:last-child) {
+            margin-right: 12px;
+        }
+    }
+}
+.nav__link {
+    color: var(--primary-text-color);
+    font-family: var(--primary-font-family);
+    font-weight: 400;
+    font-size: 15px;
+    line-height: 1.18;
+    letter-spacing: 0.02em;
+    text-align: center;
+    
+    
+    &:hover,
+    &:focus {
+        color: var(--accent-color);
+    }
+    
+    transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+    @media screen and(min-width: 1200px) {
+    font-weight: 450;
+    font-size: 20px;
+    }
 }
 
-.mobile-menu-button_icon {
+.mobile-menu-button__icon {
     fill: var(--secondary-background-color);
 }
