--- a/sass/utils/_variables.scss
+++ b/sass/utils/_variables.scss
@@ -2,8 +2,9 @@
     --primary-font-family: 'Roboto', sans-serif;
     --secondary-font-family: 'Raleway', sans-serif;
     --primary-text-color: #edf3bc;
-    --secondary-text-color: #757575;
+    --secondary-text-color: #1b1b15;
     --accent-color: #815b07;
     --primary-background-color: #000000;
     --secondary-background-color: #999900;
+    --thirty-background-color: #ffffff;
 }
