--- a/css/main.css
+++ b/css/main.css
@@ -85,10 +85,11 @@ body {
   --primary-font-family: "Roboto", sans-serif;
   --secondary-font-family: "Raleway", sans-serif;
   --primary-text-color: #edf3bc;
-  --secondary-text-color: #757575;
+  --secondary-text-color: #1b1b15;
   --accent-color: #815b07;
   --primary-background-color: #000000;
   --secondary-background-color: #999900;
+  --thirty-background-color: #ffffff;
 }
 
 .header {
@@ -208,6 +209,12 @@ body {
 .nav__link:hover, .nav__link:focus {
   color: var(--accent-color);
 }
+@media screen and (min-width: 768px) {
+  .nav__link {
+    font-weight: 400;
+    font-size: 14px;
+  }
+}
 @media screen and (min-width: 1200px) {
   .nav__link {
     font-weight: 450;
@@ -314,14 +321,109 @@ body {
 }
 
 .hero {
-  padding-top: 118px;
-  padding-bottom: 118px;
   text-align: center;
   margin-left: auto;
   margin-right: auto;
   max-width: 1600px;
+  background-color: var(--thirty-background-color);
+}
+
+.hero_background-field {
+  margin-bottom: 20px;
+  padding-top: 118px;
+  padding-bottom: 118px;
   background-size: cover;
-  background-image: linear-gradient(rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)), url(../images/back_hero.jpg);
+  background-image: linear-gradient(rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)), url(../images/back_hero_mobile.jpg);
   background-position: center;
   background-color: #c4c4c4;
+}
+@media (min-device-pixel-ratio: 2), (min-resolution: 192dpi), (min-resolution: 2dppx) {
+  .hero_background-field {
+    background-image: linear-gradient(rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)), url(../images/back_hero_mobilee@2x.jpg);
+  }
+}
+@media screen and (min-width: 768px) {
+  .hero_background-field {
+    margin-bottom: 30px;
+    background-image: linear-gradient(rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)), url(../images/back_hero_tablet.jpg);
+  }
+}
+@media screen and (min-width: 768px) and (min-device-pixel-ratio: 2), screen and (min-width: 768px) and (min-resolution: 192dpi), screen and (min-width: 768px) and (min-resolution: 2dppx) {
+  .hero_background-field {
+    background-image: linear-gradient(rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)), url(../images/back_hero_tablet@2x.jpg);
+  }
+}
+@media screen and (min-width: 1200px) {
+  .hero_background-field {
+    margin-bottom: 40px;
+    background-image: linear-gradient(rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)), url(../images/back_hero_desktop.jpg);
+    padding-top: 200px;
+    padding-bottom: 200px;
+  }
+}
+@media screen and (min-width: 1200px) and (min-device-pixel-ratio: 2), screen and (min-width: 1200px) and (min-resolution: 192dpi), screen and (min-width: 1200px) and (min-resolution: 2dppx) {
+  .hero_background-field {
+    background-image: linear-gradient(rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)), url(../images/back_hero_desktop@2x.jpg);
+  }
+}
+
+.hero__title {
+  font-family: var(--primary-font-family);
+  font-weight: 900;
+  font-size: 26px;
+  line-height: 1.62;
+  text-align: center;
+  letter-spacing: 0.06em;
+  text-transform: uppercase;
+  color: var(--primary-text-color);
+  margin-bottom: 30px;
+}
+@media screen and (min-width: 1200px) {
+  .hero__title {
+    font-weight: 900;
+    font-size: 44px;
+    line-height: 1.36;
+  }
+}
+
+.hero__subtitle {
+  font-family: var(--primary-font-family);
+  font-weight: 900;
+  font-size: 26px;
+  line-height: 1.62;
+  text-align: center;
+  letter-spacing: 0.06em;
+  text-transform: uppercase;
+  color: var(--primary-text-color);
+  margin-bottom: 30px;
+}
+
+.hero__button {
+  font-family: inherit;
+  font-weight: 700;
+  font-size: 16px;
+  line-height: 1.88;
+  letter-spacing: 0.06em;
+  color: var(--primary-text-color);
+  background-color: var(--secondary-background-color);
+  cursor: pointer;
+  min-width: 200px;
+  padding: 10px 32px;
+  border-radius: 10px;
+  box-shadow: 4px 8px 8px rgba(0, 0, 0, 0.15);
+  border-width: 0;
+  transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+.hero__button:hover, .hero__button:focus {
+  background-color: var(--accent-color);
+}
+
+.hero__text {
+  font-family: var(--primary-font-family);
+  font-weight: 400;
+  font-size: 18px;
+  line-height: 1.2;
+  text-align: center;
+  letter-spacing: 0.06em;
+  color: var(--secondary-text-color);
 }/*# sourceMappingURL=main.css.map */
