--- a/sass/components/_header.scss
+++ b/sass/components/_header.scss
@@ -108,6 +108,10 @@
     }
     
     transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+    @media screen and(min-width: 768px) {
+        font-weight: 400;
+        font-size: 14px;
+    }
     @media screen and(min-width: 1200px) {
     font-weight: 450;
     font-size: 20px;
