--- a/sass/main.scss
+++ b/sass/main.scss
@@ -6,5 +6,11 @@
 
 @import './components/header';
 @import './components/mobile-menu';
+@import './components/modal-window';
+@import './components/visually-hidden';
+@import './components/backdrop';
+@import './components/contact-form';
+@import './components/active';
+@import './components/footer';
 @import './layout/hero';
-
+@import './layout/security_services.scss';
