--- a/sass/components/_contact-form.scss
+++ b/sass/components/_contact-form.scss
@@ -1,157 +1,111 @@
 .contact-form {
-    display: flex;
-    flex-direction: column;
+  display: flex;
+  flex-direction: column;
 }
 
 .contact-form__title {
-    font-family: var(--primary-font-family);
-    font-weight: 700;
-    font-size: 20px;
-    line-height: 1.15;
-    text-align: center;
-    letter-spacing: 0.03em;
-    color: var(--primary-text-color);
-    margin-bottom: 12px;
+  font-family: var(--primary-font-family);
+  font-weight: 700;
+  font-size: 20px;
+  line-height: 1.15;
+  text-align: center;
+  letter-spacing: 0.03em;
+  color: var(--secondary-text-color);
+  margin-bottom: 12px;
 }
 
 .contact-form__label {
-    margin-bottom: 10px;
+  margin-bottom: 10px;
 }
 
 .contact-form__input {
-    width: 100%;
-    height: 40px;
-    border: 1px solid rgba(33, 33, 33, 0.2);
-    border-radius: 4px;
-    padding-left: 42px;
+  width: 100%;
+  height: 40px;
+  border: 1px solid rgba(33, 33, 33, 0.2);
+  border-radius: 4px;
+  padding-left: 42px;
+  outline: none;
+  transition: border-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  &:focus {
+    border-color: var(--accent-color);
     outline: none;
-    transition: border-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
-    &:focus {
-            border-color: var(--accent-color);
-            outline: none;
-        }
+  }
 }
 
 .contact-form__message {
-    display: block;
-    width: 100%;
-    height: 120px;
-    border: 1px solid rgba(33, 33, 33, 0.2);
-    border-radius: 4px;
-    resize: none;
-    padding: 12px 16px;
-    transition: border-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
-    &:focus {
-            border-color: var(--accent-color);
-            outline: none;
-        }
-    &::placeholder {
-            font-family: var(--primary-font-family);
-            font-size: 12px;
-            line-height: 1.16;
-            letter-spacing: 0.01em;
-            color: rgba(117, 117, 117, 0.5);
-        }
+  display: block;
+  width: 100%;
+  height: 120px;
+  border: 1px solid rgba(33, 33, 33, 0.2);
+  border-radius: 4px;
+  resize: none;
+  padding: 12px 16px;
+  transition: border-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  &:focus {
+    border-color: var(--accent-color);
+    outline: none;
+  }
+  &::placeholder {
+    font-family: var(--primary-font-family);
+    font-size: 12px;
+    line-height: 1.16;
+    letter-spacing: 0.01em;
+    color: rgba(117, 117, 117, 0.5);
+  }
 }
 
 .contact-form__text {
-    display: inline-block;
-    font-family: var(--primary-font-family);
-    font-size: 12px;
-    line-height: 1.17;
-    letter-spacing: 0.01em;
-    color: var(--secondary-text-color);
-    margin-bottom: 4px;
+  display: inline-block;
+  font-family: var(--primary-font-family);
+  font-size: 12px;
+  line-height: 1.17;
+  letter-spacing: 0.01em;
+  color: var(--secondary-text-color);
+  margin-bottom: 4px;
 }
 
 .contact-form__icon {
-    position: absolute;
-    left: 12px;
-    top: 50%;
-    transform: translateY(-50%);
-    transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
-    .contact-form__input:focus+& {
-            fill: var(--accent-color);
-        }
+  position: absolute;
+  left: 12px;
+  top: 50%;
+  transform: translateY(-50%);
+  transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  .contact-form__input:focus + & {
+    fill: var(--accent-color);
+  }
 }
 
 .contact-form__block {
-    position: relative;
+  position: relative;
 }
 
 .last {
-    margin-bottom: 20px;
-}
-
-.check-box-block {
-    display: flex;
-    margin-bottom: 30px;
-}
-
-.contact-form__checkbox {
-    justify-content: center;
-    display: flex;
-    align-items: center;
-    cursor: pointer;
-    margin-bottom: 30px;
-    font-family: var(--primary-font-family);
-    font-size: 12px;
-    line-height: 1.7;
-    letter-spacing: 0.03em;
-    color: var(--secondary-text-color);
-    @media screen and (min-width: 1200px) {
-        font-size: 14px;
-        margin-bottom: 20px;
-    }
-    &::before {
-            display: block;
-            content: '';
-            width: 16px;
-            height: 15px;
-            border: 2px solid #212121;
-            box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14),
-                0px 2px 1px rgba(0, 0, 0, 0.2);
-            border-radius: 4px;
-            margin-right: 9px;
-            transition: background-image 250ms cubic-bezier(0.4, 0, 0.2, 1),
-                border 250ms cubic-bezier(0.4, 0, 0.2, 1), box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1),
-                border-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
-                .contact-form__checkbox-input:focus+& {
-                        border-color: var(--accent-color);
-                    }
-                .contact-form__checkbox-input:checked+& {
-                        background-image: url('../images/icon_check.svg');
-                        background-size: contain;
-                        border: none;
-                        box-shadow: none;
-                        border-radius: 2px;
-                    }
-        }
+  margin-bottom: 20px;
 }
 
 .contact-form__link {
-    font-size: inherit;
-    color: var(--accent-color);
+  font-size: inherit;
+  color: var(--accent-color);
 }
 
 .contact-form__button {
-    font-family: var(--primary-font-family);
-    font-weight: 700;
-    font-size: 16px;
-    line-height: 1.88;
-    text-align: center;
-    letter-spacing: 0.06em;
-    color: #ffffff;
-    background: #2196f3;
-    box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
-    border-radius: 4px;
-    min-width: 200px;
-    height: 50px;
-    transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
-    border: none;
-    align-self: center;
-    &:hover,
-    &:focus {
-            background-color: #188ce8;
-        }
+  font-family: var(--primary-font-family);
+  font-weight: 700;
+  font-size: 16px;
+  line-height: 1.88;
+  text-align: center;
+  letter-spacing: 0.06em;
+  color: var(--primary-text-color);
+  background: var(--secondary-background-color);
+  box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
+  border-radius: 4px;
+  min-width: 200px;
+  height: 50px;
+  transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  border: none;
+  align-self: center;
+  &:hover,
+  &:focus {
+    background-color: var(--accent-color);
+  }
 }
