--- a/sass/components/_header.scss
+++ b/sass/components/_header.scss
@@ -3,8 +3,8 @@
     padding-bottom: 5px;
     background-color: var(--primary-background-color);
     border-bottom: 3px solid var(--secondary-background-color);
-    /* position: fixed;
-    width: 100%; */
+    position: sticky;
+    top: 0;
 }
 
 .header__container {
@@ -28,14 +28,14 @@
     display: flex;
     align-items: center;
     justify-content: space-between;
-    margin-bottom: 10px;
+    margin-bottom: 5px;
 }
 
 .social-list {
     display: none;
     @media screen and (min-width:768px) {
      display: flex;
-     margin-bottom: 10px;
+     margin-bottom: 5px;
      justify-content: center;
     }
 }
@@ -49,8 +49,8 @@
         display: flex;
         color: var(--primary-text-color);
         font-family: var(--primary-font-family);
-        font-weight: 500;
-        font-size: 20px;
+        font-weight: 400;
+        font-size: 18px;
         line-height: 1.18;
         letter-spacing: 0.02em;
         
@@ -113,8 +113,8 @@
         font-size: 14px;
     }
     @media screen and (min-width: 1200px) {
-    font-weight: 450;
-    font-size: 20px;
+    font-weight: 400;
+    font-size: 18px;
     }
 }
 
