--- a/src/sass/layout/_hero.scss
+++ b/src/sass/layout/_hero.scss
@@ -11,36 +11,36 @@
   padding-bottom: 118px;
   background-size: cover;
   background-image: linear-gradient(rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)),
-    url(../images/back_hero_mobile.jpg);
+    url(../../images/back_hero_mobile.jpg);
   background-position: center;
   background-color: var(--primary-background-color);
 
   @media (min-device-pixel-ratio: 2), (min-resolution: 192dpi), (min-resolution: 2dppx) {
     background-image: linear-gradient(rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)),
-      url(../images/back_hero_mobile_2x.jpg);
+      url(../../images/back_hero_mobile_2x.jpg);
   }
 
   @media screen and (min-width: 768px) {
     margin-bottom: 30px;
     background-image: linear-gradient(rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)),
-      url(../images/back_hero_tablet.jpg);
+      url(../../images/back_hero_tablet.jpg);
 
     @media (min-device-pixel-ratio: 2), (min-resolution: 192dpi), (min-resolution: 2dppx) {
       background-image: linear-gradient(rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)),
-        url(../images/back_hero_tablet@x2.jpg);
+        url(../../images/back_hero_tablet@x2.jpg);
     }
   }
 
   @media screen and (min-width: 1200px) {
     margin-bottom: 40px;
     background-image: linear-gradient(rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)),
-      url(../images/back_hero_desktop.jpg);
+      url(../../images/back_hero_desktop.jpg);
     padding-top: 200px;
     padding-bottom: 200px;
 
     @media (min-device-pixel-ratio: 2), (min-resolution: 192dpi), (min-resolution: 2dppx) {
       background-image: linear-gradient(rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)),
-        url(../images/back_hero_desktop@2x.jpg);
+        url(../../images/back_hero_desktop@2x.jpg);
     }
   }
 }
