start security section

--- a/src/partials/mobile_menu.html
+++ b/src/partials/mobile_menu.html
@@ -13,7 +13,7 @@
             <a class="mobile-nav__link" href="./index.html" target="_self">O NAS</a>
           </li>
           <li class="mobile-nav__item">
-            <a class="mobile-nav__link" href="">BEZPEČNOSTNÍ SLUŽBY</a>
+            <a class="mobile-nav__link" href="#security_services">BEZPEČNOSTNÍ SLUŽBY</a>
           </li>
           <li class="mobile-nav__item">
             <a class="mobile-nav__link" href="">ZABEZPEČOVACÍ A KAMEROVÉ SYSTÉMY</a>
