--- a/src/partials/security_services.html
+++ b/src/partials/security_services.html
@@ -1,5 +1,82 @@
-<section class="section background">
+<section class="section background" id="security_services">
   <div class="container">
     <h2 class="section__title">Bezpečnostní služby</h2>
+    <ul class="cards-list">
+      <li class="cards-list__item">
+        <picture class="cards-list__img">
+          <source
+            srcset="../images/cards1@1x.webp 1x, ../images/cards1@2x.webp 2x"
+            type="image/webp"
+          />
+          <source srcset="../images/cards1@1x.jpg 1x, ../images/cards1@2x.jpg 2x" />
+          <img src="../images/cards1@1x.jpg" alt="security guard" />
+        </picture>
+        <div class="cards-list__box">
+          <ul class="cards-list__sublist">
+            <li class="cards-list__subitem">
+              <p class="cards-list__text">Fyzická bezpečnostní služba</p>
+            </li>
+            <li class="cards-list__subitem">
+              <p class="cards-list__text">Event security a pořadatelská činnost</p>
+            </li>
+            <li class="cards-list__subitem">
+              <p class="cards-list__text">Ostraha se psem</p>
+            </li>
+            <li class="cards-list__subitem">
+              <p class="cards-list__text">Vrátné služby</p>
+            </li>
+            <li class="cards-list__subitem">
+              <p class="cards-list__text">Mobilní patrola</p>
+            </li>
+            <li class="cards-list__subitem">
+              <p class="cards-list__text">Ostraha objektů</p>
+            </li>
+          </ul>
+        </div>
+      </li>
+      <li class="cards-list__item">
+        <picture></picture>
+        <ul class="cards-list__list">
+          <li class="cards-list__subitem">
+            <p class="cards-list__text">Ochrana osob – bodyguarding</p>
+          </li>
+          <li class="cards-list__subitem">
+            <p class="cards-list__text">Osobní ochránce</p>
+          </li>
+          <li class="cards-list__subitem">
+            <p class="cards-list__text">VIP ochranka</p>
+          </li>
+          <li class="cards-list__subitem">
+            <p class="cards-list__text">Bezpečnostní doprovody dětí do školy</p>
+          </li>
+          <li class="cards-list__subitem">
+            <p class="cards-list__text">Executive protection</p>
+          </li>
+        </ul>
+      </li>
+      <li class="cards-list__item">
+        <picture></picture>
+        <ul class="cards-list__list">
+          <li class="cards-list__subitem">
+            <p class="cards-list__text">Pult centralizované ochrany PCO</p>
+          </li>
+          <li class="cards-list__subitem">
+            <p class="cards-list__text">PCO – monitoring objektů</p>
+          </li>
+          <li class="cards-list__subitem">
+            <p class="cards-list__text">PCO Monitoring osob – tísňové systémy</p>
+          </li>
+          <li class="cards-list__subitem">
+            <p class="cards-list__text">PCO Monitoring vozidel</p>
+          </li>
+          <li class="cards-list__subitem">
+            <p class="cards-list__text">Mobilní zásahové jednotky</p>
+          </li>
+          <li class="cards-list__subitem">
+            <p class="cards-list__text">Vzdálený kamerový dohled</p>
+          </li>
+        </ul>
+      </li>
+    </ul>
   </div>
 </section>
