--- a/src/partials/header.html
+++ b/src/partials/header.html
@@ -1,90 +1,92 @@
-    <!-- Header -->
-    <header class="header">
-      <div class="container header__container">
-        <div class="header__menu-field">
-          <a class="header__logo" href="./index.html" target="_self">
-            <picture>
-              <source
-                srcset="../images/logo.jpg 1x, ../images/logo_2x.jpg 2x"
-                type="image/jpeg"
-                media="(min-width: 1200px)"
-                width="100"
-                height="100"
-              />
-              <source
-                srcset="../images/logo.webp 1x, ../images/logo_2x.webp 2x"
-                type="image/webp"
-                media="(min-width: 1200px)"
-                width="100"
-                height="100"
-              />
-              <source
-                srcset="../images/logo.webp 1x, ../images/logo_2x.webp 2x"
-                type="image/webp"
-                media="(min-width: 768px)"
-                width="85"
-                height="85"
-              />
-              <source
-                srcset="../images/logo.jpg 1x, ../images/logo_2x.jpg 2x"
-                type="image/jpeg"
-                media="(min-width: 768px)"
-                width="85"
-                height="85"
-              />
-              <source
-                srcset="../images/logo.webp 1x, ../images/logo_2x.webp 2x"
-                type="image/webp"
-                width="60"
-                height="60"
-              />
-              <source
-                srcset="../images/logo.jpg 1x, ../images/logo_2x.jpg 2x"
-                type="image/jpeg"
-                width="60"
-                height="60"
-              />
-              <img src="../images/logo.jpg" alt="logotipe" width="60" height="60" />
-            </picture>
-          </a>
-          <div class="header__social-field">
-            <ul class="social-list">
-              <li class="social-list__item">
-                <a href="https://www.instagram.com/cpbsecurity/">
-                  <svg height="30" width="30" class="social-list__icon">
-                    <use href="../images/symbol-defs.svg#icon-instagram-1"></use>
-                  </svg>
-                </a>
-              </li>
-              <li class="social-list__item">
-                <a href="">
-                  <svg height="30" width="30" class="social-list__icon">
-                    <use href="../images/symbol-defs.svg#icon-facebook-1"></use>
-                  </svg>
-                </a>
-              </li>
-            </ul>
-            <a class="header__contact-link" href="">KONTACT</a>
-          </div>
-        </div>
-        <nav class="nav">
-          <ul class="nav__list">
-            <li class="nav__item"><a class="nav__link" href="">O NAS</a></li>
-            <li class="nav__item"><a class="nav__link" href="">BEZPEČNOSTNÍ SLUŽBY</a></li>
-            <li class="nav__item">
-              <a class="nav__link" href="">ZABEZPEČOVACÍ A KAMEROVÉ SYSTÉMY</a>
-            </li>
-            <li class="nav__item"><a class="nav__link" href="">MONITORING OBJEKTŮ PCO</a></li>
-            <li class="nav__item"><a class="nav__link" href="">ÚKLIDOVÉ SLUŽBY</a></li>
-            <li class="nav__item"><a class="nav__link" href="">HOSTESKY</a></li>
-            <li class="nav__item"><a class="nav__link" href="">KARIÉRA</a></li>
-          </ul>
-        </nav>
-        <button class="mobile-menu-button" type="button" data-menu-open>
-          <svg class="mobile-menu-button__icon" height="30" width="30">
-            <use href="../images/symbol-defs.svg#icon-menu"></use>
-          </svg>
-        </button>
+<!-- Header -->
+<header class="header">
+  <div class="container header__container">
+    <div class="header__menu-field">
+      <a class="header__logo" href="./index.html" target="_self">
+        <picture>
+          <source
+            srcset="../images/logo.jpg 1x, ../images/logo_2x.jpg 2x"
+            type="image/jpeg"
+            media="(min-width: 1200px)"
+            width="100"
+            height="100"
+          />
+          <source
+            srcset="../images/logo.webp 1x, ../images/logo_2x.webp 2x"
+            type="image/webp"
+            media="(min-width: 1200px)"
+            width="100"
+            height="100"
+          />
+          <source
+            srcset="../images/logo.webp 1x, ../images/logo_2x.webp 2x"
+            type="image/webp"
+            media="(min-width: 768px)"
+            width="85"
+            height="85"
+          />
+          <source
+            srcset="../images/logo.jpg 1x, ../images/logo_2x.jpg 2x"
+            type="image/jpeg"
+            media="(min-width: 768px)"
+            width="85"
+            height="85"
+          />
+          <source
+            srcset="../images/logo.webp 1x, ../images/logo_2x.webp 2x"
+            type="image/webp"
+            width="60"
+            height="60"
+          />
+          <source
+            srcset="../images/logo.jpg 1x, ../images/logo_2x.jpg 2x"
+            type="image/jpeg"
+            width="60"
+            height="60"
+          />
+          <img src="../images/logo.jpg" alt="logotipe" width="60" height="60" />
+        </picture>
+      </a>
+      <div class="header__social-field">
+        <ul class="social-list">
+          <li class="social-list__item">
+            <a href="https://www.instagram.com/cpbsecurity/">
+              <svg height="30" width="30" class="social-list__icon">
+                <use href="../images/symbol-defs.svg#icon-instagram-1"></use>
+              </svg>
+            </a>
+          </li>
+          <li class="social-list__item">
+            <a href="">
+              <svg height="30" width="30" class="social-list__icon">
+                <use href="../images/symbol-defs.svg#icon-facebook-1"></use>
+              </svg>
+            </a>
+          </li>
+        </ul>
+        <a class="header__contact-link" href="">KONTACT</a>
       </div>
-    </header>
-    <!-- /Header -->
+    </div>
+    <nav class="nav">
+      <ul class="nav__list">
+        <li class="nav__item"><a class="nav__link" href="">O NAS</a></li>
+        <li class="nav__item">
+          <a class="nav__link" href="#security_services">BEZPEČNOSTNÍ SLUŽBY</a>
+        </li>
+        <li class="nav__item">
+          <a class="nav__link" href="">ZABEZPEČOVACÍ A KAMEROVÉ SYSTÉMY</a>
+        </li>
+        <li class="nav__item"><a class="nav__link" href="">MONITORING OBJEKTŮ PCO</a></li>
+        <li class="nav__item"><a class="nav__link" href="">ÚKLIDOVÉ SLUŽBY</a></li>
+        <li class="nav__item"><a class="nav__link" href="">HOSTESKY</a></li>
+        <li class="nav__item"><a class="nav__link" href="">KARIÉRA</a></li>
+      </ul>
+    </nav>
+    <button class="mobile-menu-button" type="button" data-menu-open>
+      <svg class="mobile-menu-button__icon" height="30" width="30">
+        <use href="../images/symbol-defs.svg#icon-menu"></use>
+      </svg>
+    </button>
+  </div>
+</header>
+<!-- /Header -->
