--- a/src/sass/layout/_hero.scss
+++ b/src/sass/layout/_hero.scss
@@ -1,5 +1,5 @@
 .hero {
-  text-align: center;
+  text-align: left;
   margin-left: auto;
   margin-right: auto;
   max-width: 1600px;
@@ -48,7 +48,7 @@
   font-weight: 900;
   font-size: 24px;
   line-height: 1.62;
-  text-align: center;
+  text-align: left;
   letter-spacing: 0.06em;
   text-transform: uppercase;
   color: var(--primary-text-color);
