--- a/src/sass/index.scss
+++ b/src/sass/index.scss
@@ -13,4 +13,7 @@
 @import './components/active';
 @import './components/footer';
 @import './layout/hero';
-@import './layout/security_services.scss';
+@import './layout/our_services.scss';
+@import './layout/contact';
+@import './layout/security_services';
+@import './layout/career';
