--- a/src/partials/footer.html
+++ b/src/partials/footer.html
@@ -2,28 +2,14 @@
 <footer class="footer">
   <div class="container footer-container">
     <div class="footer-contact">
-      <address class="address">
-        <ul class="address-list">
-          <li class="address-list__item">
-            <a
-              href="https://goo.gl/maps/4vPcKP6WjWafDqh37"
-              target="_blank"
-              title="Open in Google maps"
-              rel="nofollow noreferrer noopener"
-              class="address-list__link"
-              >36001, Karlovy Vary Mattoniho nabrezi 697</a
-            >
-          </li>
-          <li class="address-list__item">
-            <a href="mailto: cpbsecurity@email.cz" class="address-list__link"
-              >Email: cpbsecurity@email.cz</a
-            >
-          </li>
-          <li class="address-list__item">
-            <a href="tel:+380991111111" class="address-list__link">tel:+380991111111</a>
-          </li>
-        </ul>
-      </address>
+      <ul class="address-list">
+        <li class="address-list__item">
+          <a href="mailto: cpbsecurity@email.cz" class="address-list__link">cpbsecurity@email.cz</a>
+        </li>
+        <li class="address-list__item">
+          <a href="tel:+420603392943" class="address-list__link">+420 603392943</a>
+        </li>
+      </ul>
     </div>
     <div class="footer-button">
       <button class="hero__button" type="button" data-modal-open-footer>KONTAKTUJTE MĚ</button>
@@ -39,7 +25,10 @@
           </a>
         </li>
         <li class="join__item">
-          <a href="" class="join__link"
+          <a
+            href="https://www.facebook.com/profile.php?id=100084510293669"
+            target="_blank"
+            class="join__link"
             ><svg height="40" width="40" class="social-list__icon">
               <use href="../images/symbol-defs.svg#icon-facebook-1"></use>
             </svg>
