--- a/src/partials/mobile_menu.html
+++ b/src/partials/mobile_menu.html
@@ -10,37 +10,39 @@
       <nav class="mobile-nav">
         <ul class="mobile-nav__list">
           <li class="mobile-nav__item">
-            <a class="mobile-nav__link" href="./index.html" target="_self">O NAS</a>
+            <a class="mobile-nav__link" href="./index.html" target="_self">Domů</a>
           </li>
           <li class="mobile-nav__item">
-            <a class="mobile-nav__link" href="#security_services">BEZPEČNOSTNÍ SLUŽBY</a>
+            <a class="mobile-nav__link" href="#our_services">Naše Služby</a>
           </li>
           <li class="mobile-nav__item">
-            <a class="mobile-nav__link" href="">ZABEZPEČOVACÍ A KAMEROVÉ SYSTÉMY</a>
+            <a class="mobile-nav__link" href="">Kontakt</a>
           </li>
           <li class="mobile-nav__item">
-            <a class="mobile-nav__link" href="">MONITORING OBJEKTŮ PCO</a>
+            <a class="mobile-nav__link" href="">Kariéra</a>
           </li>
-          <li class="mobile-nav__item">
-            <a class="mobile-nav__link" href="">ÚKLIDOVÉ SLUŽBY</a>
-          </li>
-          <li class="mobile-nav__item"><a class="mobile-nav__link" href="">HOSTESKY</a></li>
-          <li class="mobile-nav__item"><a class="mobile-nav__link" href="">KARIÉRA</a></li>
-          <li class="mobile-nav__item"><a class="mobile-nav__link" href="">KONTACT</a></li>
         </ul>
       </nav>
     </div>
     <div class="contact-field">
       <ul class="mobile-social-list">
         <li class="mobile-social-list__item">
-          <a class="mobile-social-list__link" href="">
+          <a
+            class="mobile-social-list__link"
+            href="https://www.instagram.com/cpbsecurity/"
+            target="_blank"
+          >
             <svg class="mobile-social-list__icon" height="30" width="30">
               <use href="../images/symbol-defs.svg#icon-instagram-1"></use>
             </svg>
           </a>
         </li>
         <li class="mobile-social-list__item">
-          <a class="mobile-social-list__link" href="">
+          <a
+            class="mobile-social-list__link"
+            href="https://www.facebook.com/profile.php?id=100084510293669"
+            target="_blank"
+          >
             <svg class="mobile-social-list__icon" height="30" width="30">
               <use href="../images/symbol-defs.svg#icon-facebook-1"></use>
             </svg>
