--- a/src/partials/hero.html
+++ b/src/partials/hero.html
@@ -1,5 +1,5 @@
 <!--Hero-->
-<section class="hero">
+<section class="hero" id="hero">
   <div class="hero_background-field">
     <div class="container">
       <h1 class="section__title">CHRÁNÍME VÁS A VÁŠ MAJETEK</h1>
