--- a/src/partials/mobile_menu.html
+++ b/src/partials/mobile_menu.html
@@ -10,16 +10,16 @@
       <nav class="mobile-nav">
         <ul class="mobile-nav__list">
           <li class="mobile-nav__item">
-            <a class="mobile-nav__link" href="./index.html" target="_self">Domů</a>
+            <a class="mobile-nav__link" href="#hero" target="_self">Domů</a>
           </li>
           <li class="mobile-nav__item">
             <a class="mobile-nav__link" href="#our_services">Naše Služby</a>
           </li>
           <li class="mobile-nav__item">
-            <a class="mobile-nav__link" href="">Kontakt</a>
+            <a class="mobile-nav__link" href="#contact">Kontakt</a>
           </li>
           <li class="mobile-nav__item">
-            <a class="mobile-nav__link" href="">Kariéra</a>
+            <a class="mobile-nav__link" href="#career">Kariéra</a>
           </li>
         </ul>
       </nav>
