--- a/src/partials/career.html
+++ b/src/partials/career.html
@@ -1,5 +1,3 @@
 <section class="section background" id="career">
-  <div class="container">
-    <h2 class="section__title">Kontaktuj nás</h2>
-  </div>
+  <div class="container"></div>
 </section>
