--- a/src/partials/header.html
+++ b/src/partials/header.html
@@ -3,7 +3,7 @@
   <div class="container header__container">
     <div class="header__menu-field">
       <a class="header__logo" href="./index.html" target="_self">
-        <picture>
+        <picture class="header__logo-img">
           <source
             srcset="../images/logo.jpg 1x, ../images/logo_2x.jpg 2x"
             type="image/jpeg"
@@ -49,12 +49,12 @@
       </a>
       <nav class="nav">
         <ul class="nav__list">
-          <li class="nav__item"><a class="nav__link" href="">Domů</a></li>
+          <li class="nav__item"><a class="nav__link" href="#hero">Domů</a></li>
           <li class="nav__item">
             <a class="nav__link" href="#our_services">Naše Služby</a>
           </li>
-          <li class="nav__item"><a class="nav__link" href="">Kontakt</a></li>
-          <li class="nav__item"><a class="nav__link" href="">Kariéra</a></li>
+          <li class="nav__item"><a class="nav__link" href="#contact">Kontakt</a></li>
+          <li class="nav__item"><a class="nav__link" href="#career">Kariéra</a></li>
         </ul>
       </nav>
       <div class="header__social-field">
