--- a/src/partials/header.html
+++ b/src/partials/header.html
@@ -53,6 +53,7 @@
           <li class="nav__item">
             <a class="nav__link" href="#our_services">Naše Služby</a>
           </li>
+          <li class="nav__item"><a class="nav__link" href="#galerie">Galerie</a></li>
           <li class="nav__item"><a class="nav__link" href="#contact">Kontakt</a></li>
           <li class="nav__item"><a class="nav__link" href="#career">Kariéra</a></li>
         </ul>
