--- a/src/sass/index.scss
+++ b/src/sass/index.scss
@@ -17,3 +17,5 @@
 @import './layout/contact';
 @import './layout/security_services';
 @import './layout/career';
+@import './components/swiper.scss';
+@import './layout/galerie.scss';
