--- a/src/sass/components/_header.scss
+++ b/src/sass/components/_header.scss
@@ -5,6 +5,7 @@
   border-bottom: 3px solid var(--secondary-background-color);
   position: sticky;
   top: 0;
+  z-index: 100;
 }
 
 .header__container {
@@ -31,9 +32,14 @@
 }
 
 .header__logo {
-  max-width: 100px;
+  max-width: 60px;
   @media screen and (min-width: 768px) {
-    margin-right: 90px;
+    margin-right: 30px;
+    max-width: 85px;
+  }
+  @media screen and (min-width: 1200px) {
+    margin-right: 80px;
+    max-width: 100px;
   }
 }
 
