--- a/src/sass/base/_section.scss
+++ b/src/sass/base/_section.scss
@@ -1,7 +1,9 @@
 .section {
-  padding-bottom: 60px;
+  padding-top: 25px;
+  padding-bottom: 25px;
   @media screen and (min-width: 1200px) {
-    padding-bottom: 94px;
+    padding-top: 40px;
+    padding-bottom: 40px;
   }
 }
 .section__title {
