--- a/src/partials/galerie.html
+++ b/src/partials/galerie.html
@@ -1,8 +1,6 @@
 <section class="section background" id="galerie">
   <div class="container">
-    <div class="title-wrapper">
-      <h2 class="section-title">Galerie</h2>
-    </div>
+    <h2 class="section__title">Galerie</h2>
     <div class="swiper">
       <div class="swiper-wrapper">
         <div class="swiper-slide">
