--- a/src/sass/components/_swiper.scss
+++ b/src/sass/components/_swiper.scss
@@ -6,7 +6,7 @@
 .swiper-slide {
   text-align: center;
   font-size: 18px;
-  border: solid 1px red;
+  box-shadow: 0px 5px 10px 2px rgba(231, 220, 60, 0.2);
   display: flex;
   align-items: center;
   justify-content: center;
