end contact section and start career

--- a/src/partials/career.html
+++ b/src/partials/career.html
@@ -1,3 +1,9 @@
 <section class="section background" id="career">
-  <div class="container"></div>
+  <div class="container">
+    <h2 class="section__title">Přidej se do našeho týmu</h2>
+    <div class="career__wrapper">
+      <p class="career__text"></p>
+      <button class="career__btn"></button>
+    </div>
+  </div>
 </section>
