--- a/src/partials/contact.html
+++ b/src/partials/contact.html
@@ -16,7 +16,7 @@
             </svg>
             <p class="contact-list__text">Adresa</p>
           </li>
-          <li class="contact-info__item contact-info__wrapper">
+          <li class="contact-info__item">
             <svg class="contact-list__icon" width="25" height="25">
               <use href="../images/symbol-defs.svg#icon-envelope"></use>
             </svg>
@@ -24,7 +24,7 @@
               >cpbsecurity@email.cz</a
             >
           </li>
-          <li class="contact-info__item contact-info__wrapper">
+          <li class="contact-info__item">
             <svg class="contact-list__icon" width="25" height="25">
               <use href="../images/symbol-defs.svg#icon-phone-call"></use>
             </svg>
