add formular and logic

--- a/src/partials/career.html
+++ b/src/partials/career.html
@@ -2,8 +2,8 @@
   <div class="container">
     <h2 class="section__title">Přidej se do našeho týmu</h2>
     <div class="career__wrapper">
-      <p class="career__text"></p>
-      <button class="career__btn"></button>
+      <p class="career__text">Vplni jednoduchyj formulař a zavolame tobě!</p>
+      <button class="career__btn" data-menu-openf>Vplnit</button>
     </div>
   </div>
 </section>
