--- a/src/sass/layout/_career.scss
+++ b/src/sass/layout/_career.scss
@@ -1,27 +1,83 @@
 .career__wrapper {
   height: 250px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  flex-direction: column;
+  padding-top: 30px;
   background-size: cover;
-  background-image: linear-gradient(rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)),
+  background-image: linear-gradient(rgba(41, 42, 48, 0.7), rgba(41, 42, 48, 0.7)),
     url(../../images/back-join-our-team.jpg);
   background-position: center;
   background-color: var(--primary-background-color);
 
   @media (min-device-pixel-ratio: 2), (min-resolution: 192dpi), (min-resolution: 2dppx) {
-    background-image: linear-gradient(rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)),
+    background-image: linear-gradient(rgba(41, 42, 48, 0.7), rgba(41, 42, 48, 0.7)),
       url(../../images/back-join-our-team.jpg);
   }
 
   @media screen and (min-width: 768px) {
     height: 350px;
-    background-image: linear-gradient(rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)),
+    background-image: linear-gradient(rgba(41, 42, 48, 0.7), rgba(41, 42, 48, 0.7)),
       url(../../images/back-join-our-team.jpg);
 
     @media (min-device-pixel-ratio: 2), (min-resolution: 192dpi), (min-resolution: 2dppx) {
-      background-image: linear-gradient(rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)),
+      background-image: linear-gradient(rgba(41, 42, 48, 0.7), rgba(41, 42, 48, 0.7)),
         url(../../images/back-join-our-team.jpg);
     }
   }
   @media screen and (min-width: 1200px) {
     height: 450px;
+  }
+}
+
+.career__text {
+  font-weight: 600;
+  font-size: 22px;
+  line-height: 1.17;
+  text-align: center;
+  letter-spacing: 0.03em;
+  color: var(--primary-text-color);
+  margin-bottom: 70px;
+}
+
+.career__btn {
+  font-family: inherit;
+  font-weight: 600;
+  font-size: 14px;
+  line-height: 1.17;
+  letter-spacing: 0.06em;
+  color: var(--primary-text-color);
+  background-color: var(--secondary-background-color);
+  cursor: pointer;
+  min-width: 100px;
+  padding: 10px 32px;
+  border-radius: 10px;
+  box-shadow: 4px 8px 8px rgba(0, 0, 0, 0.15);
+  border-width: 0;
+  transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  animation: glowing 1300ms infinite;
+
+  &:hover,
+  &:focus {
+    background-color: var(--accent-color);
+  }
+}
+
+@keyframes glowing {
+  0% {
+    background-color: var(--secondary-background-color);
+    box-shadow: 0 0 3px #815b07;
+    transform: scale(0.85);
+  }
+  50% {
+    background-color: var(--secondary-background-color);
+    box-shadow: 0 0 15px #815b07;
+    transform: scale(1);
+  }
+  100% {
+    background-color: var(--secondary-background-color);
+    box-shadow: 0 0 3px #815b07;
+    transform: scale(0.85);
   }
 }
