fixed/modal and anded formular

--- a/src/partials/formular.html
+++ b/src/partials/formular.html
@@ -5,7 +5,7 @@
         <use href="../images/symbol-defs.svg#icon-close"></use>
       </svg>
     </button>
-    <form class="contact-form">
+    <form class="contact-form" id="formular-form">
       <p class="contact-form__title">Zajem o prace</p>
       <label class="contact-form__label">
         <span class="contact-form__text">Jméno a Přijmení</span>
