--- a/src/partials/modal_menu.html
+++ b/src/partials/modal_menu.html
@@ -6,7 +6,7 @@
         <use href="../images/symbol-defs.svg#icon-close"></use>
       </svg>
     </button>
-    <form class="contact-form">
+    <form class="contact-form" id="modal-form">
       <p class="contact-form__title">Kontaktní formulář</p>
       <label class="contact-form__label">
         <span class="contact-form__text">Jméno</span>
