--- a/src/sass/components/_modal-window.scss
+++ b/src/sass/components/_modal-window.scss
@@ -1,41 +1,41 @@
 .modal {
-    position: absolute;
-    top: 70%;
-    left: 50%;
-    transform: translate(-50%, -50%);
-    max-height: 609px;
-    width: 100%;
-    max-width: 450px;
-    background: #ffffff;
-    box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14),
-        0px 2px 1px rgba(0, 0, 0, 0.2);
-    border-radius: 4px;
-    padding: 40px 40px;
-    @media screen and (min-width: 1200px) {
-        max-width: 528px;
-    }
+  position: absolute;
+  top: 70%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  max-height: auto;
+  width: 100%;
+  max-width: 450px;
+  background: #ffffff;
+  box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14),
+    0px 2px 1px rgba(0, 0, 0, 0.2);
+  border-radius: 4px;
+  padding: 40px 40px;
+  @media screen and (min-width: 1200px) {
+    max-width: 528px;
+  }
 }
 
 .modal__close {
-    width: 30px;
-    height: 30px;
-    border-radius: 50%;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    padding: 0;
-    background-color: transparent;
-    border: 1px solid rgba(0, 0, 0, 0.1);
-    position: absolute;
-    right: 8px;
-    top: 8px;
-    cursor: pointer;
+  width: 30px;
+  height: 30px;
+  border-radius: 50%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  padding: 0;
+  background-color: transparent;
+  border: 1px solid rgba(0, 0, 0, 0.1);
+  position: absolute;
+  right: 8px;
+  top: 8px;
+  cursor: pointer;
 }
 
 .modal__icon {
-    transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
-    .modal__close:hover &,
-    .modal__close:focus & {
-            fill: var(--accent-color);
-        }
+  transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  .modal__close:hover &,
+  .modal__close:focus & {
+    fill: var(--accent-color);
+  }
 }
