fixed mobile menu

--- a/src/partials/mobile_menu.html
+++ b/src/partials/mobile_menu.html
@@ -1,7 +1,7 @@
 <!-- Mobile menu -->
 <div class="mobile-menu" data-menu>
   <div class="container mobile-menu__container">
-    <button class="mobile-menu__button" type="button" data-menu-close>
+    <button class="mobile-menu__button" type="button">
       <svg class="mobile-menu__icon-close" height="19px" width="19px">
         <use href="../images/symbol-defs.svg#icon-close"></use>
       </svg>
@@ -10,7 +10,7 @@
       <nav class="mobile-nav">
         <ul class="mobile-nav__list">
           <li class="mobile-nav__item">
-            <a class="mobile-nav__link" href="#hero" target="_self">Domů</a>
+            <a class="mobile-nav__link" href="#hero">Domů</a>
           </li>
           <li class="mobile-nav__item">
             <a class="mobile-nav__link" href="#our_services">Naše Služby</a>
