add active and fixed modal

--- a/src/partials/career.html
+++ b/src/partials/career.html
@@ -1,6 +1,6 @@
 <section class="section background" id="career">
   <div class="container">
-    <h2 class="section__title">Přidej se do našeho týmu</h2>
+    <h2 class="section__title active">Přidej se do našeho týmu</h2>
     <div class="career__wrapper">
       <p class="career__text">Vplni jednoduchyj formulař a zavolame tobě!</p>
       <button class="career__btn" data-menu-openf>Vplnit</button>
