--- a/src/partials/contact.html
+++ b/src/partials/contact.html
@@ -1,6 +1,6 @@
 <section class="section background" id="contact">
   <div class="container">
-    <h2 class="section__title">Kontaktuj nás</h2>
+    <h2 class="section__title active">Kontaktuj nás</h2>
     <ul class="contact-list">
       <li class="contact-list__item">
         <ul class="contact-info">
