--- a/src/partials/galerie.html
+++ b/src/partials/galerie.html
@@ -1,6 +1,6 @@
 <section class="section background" id="galerie">
   <div class="container">
-    <h2 class="section__title">Galerie</h2>
+    <h2 class="section__title active">Galerie</h2>
     <div class="swiper">
       <div class="swiper-wrapper">
         <div class="swiper-slide">
