--- a/src/partials/our_services.html
+++ b/src/partials/our_services.html
@@ -1,6 +1,6 @@
 <section class="section background" id="our_services">
   <div class="container">
-    <h2 class="section__title">Naše Služby</h2>
+    <h2 class="section__title active">Naše Služby</h2>
     <ul class="cards-list">
       <li class="cards-list__item">
         <a href="./partials/security_services.html" class="cards-list__link" target="_blank">
