--- a/src/sass/layout/_hero.scss
+++ b/src/sass/layout/_hero.scss
@@ -53,6 +53,7 @@
   text-transform: uppercase;
   color: var(--primary-text-color);
   margin-bottom: 30px;
+  position: relative;
 }
 
 .hero__button {
